@@ -19,6 +19,7 @@ Change log 1.3 (under development)
 * PowerMock now changes the context class-loader to the MockClassloader which means that you don't need to use @PowerMockIgnore as often as before. This solves many issues with frameworks that creates new instances using reflection like log4j, hibernate and many XML frameworks. This fix is not backward compatible with version 1.2.5! If you've been using PowerMockIgnore in your test you may need to remove it (or update the ignored package list) otherwise the test might fail.
 * Implemented support for setting internal state from a context (using Whitebox.setInternalStateFromContext(..)).
 * Error message differ between static or instance type fields when internal state cannot be set because a field wasn't found.
+* PowerMock now supports mocking instance methods of final system classes (such as java.lang.String). To do this you need to prepare the class that invokes the method of the system class as well as the actual test case. Note that partial mocking of instance methods in final system classes doesn't work yet.
 
 
 Change log 1.2.5 (released 2009-05-05)
